arrumando o href de voltar pra voltar pra /

--- a/templates/DetailsTemplate.html
+++ b/templates/DetailsTemplate.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <div style="display:flex; align-items:center; gap:8px;"><h1>Bem Me Cake</h1><img src="imgs/Logo_BemMeCake.png" alt="Logo" style="height:30px;"></div>
-    <a href="index.html" class="btn">⬅ Voltar</a>
+    <a href="/" class="btn">⬅ Voltar</a>
   </header>
   <div class="container">
     <div class="card">
