--- a/templates/DetailsTemplate.html
+++ b/templates/DetailsTemplate.html
@@ -13,7 +13,7 @@
     .card img { flex:1 1 300px; max-width:350px; border-radius:12px; object-fit:cover; }
     .card-content { flex:2 1 400px; }
     .card-content h2 { color:#ff4da6; margin-top:0; font-size:26px; }
-    .precos { background:#f/home/biglinux/Card-pio---Bem_Me_Cake/templates/Bolo_de_BananaCaramelizada.htmlff0f6; border-left:5px solid #ff4da6; padding:10px; margin:15px 0; border-radius:8px; }
+    .precos { background:#fff0f6; border-left:5px solid #ff4da6; padding:10px; margin:15px 0; border-radius:8px; }
     .precos p { margin:5px 0; font-weight:bold; }
     .ingredientes { margin:15px 0; }
     .ingredientes span { display:inline-block; background:#ffe6f0; padding:6px 12px; margin:4px; border-radius:20px; font-size:14px; }
@@ -34,7 +34,7 @@
       <div class="card-content">
         <h2>{{ name }}</h2>
         <div class="precos">
-          <p>📍 Pequeno (P): {{ value_s}} --  Adcional de cobertura (P): </p>
+          <p>📍 Pequeno (P): {{ value_s }} --  Adcional de cobertura (P): </p>
           <p>📍 Grande (G): {{ value_b }} --  Adcional de cobertura (G): </p>
         </div>
         <div class="ingredientes">
