--- a/templates/index.html
+++ b/templates/index.html
@@ -293,7 +293,7 @@
     <div class="card">
       <img src="{{ url_for('static', filename='imgs/' + 'bolo_' + bolo + '.img') }}" alt="{{ bolo.nome }}">
       <div class="card-content">
-        <h4>{{ bolo.id }}. {{ bolo.nome }} <span>{{ bolo.preco }}</span></h4>
+        <h4>{{ bolo.id }}. {{ bolo.nome }}</h4>
         <p><em>{{ bolo.descricao }}</em></p>
         <a href="{{ bolo.link }}" class="btn">Saiba Mais</a>
       </div>
@@ -306,7 +306,7 @@
     <div class="card">
       <img src="{{ url_for('static', filename='imgs/' + 'bolo_' + bolo + '.img') }}" alt="{{ bolo.nome }}">
       <div class="card-content">
-        <h4>{{ bolo.id }}. {{ bolo.nome }} <span>{{ bolo.preco }}</span></h4>
+        <h4>{{ bolo.id }}. {{ bolo.nome }}</h4>
         <p><em>{{ bolo.descricao }}</em></p>
         <a href="{{ bolo.link }}" class="btn">Saiba Mais</a>
       </div>
@@ -319,7 +319,7 @@
     <div class="card">
       <img src="{{ url_for('static', filename='imgs/' + 'doce_' + doce + '.img') }}" alt="{{ bolo.nome }}">
       <div class="card-content">
-        <h4>{{ doce.id }}. {{ doce.nome }} <span>{{ doce.preco }}</span></h4>
+        <h4>{{ doce.id }}. {{ doce.nome }}</h4>
         <p><em>{{ doce.descricao }}</em></p>
         <a href="{{ doce.link }}" class="btn">Saiba Mais</a>
       </div>
@@ -332,7 +332,7 @@
     <div class="card">
       <img src="{{ url_for('static', filename='imgs/' + recheio.img) }}" alt="{{ recheio.nome }}">
       <div class="card-content">
-        <h4>{{ recheio.id }}. {{ recheio.nome }} <span>{{ recheio.preco }}</span></h4>
+        <h4>{{ recheio.id }}. {{ recheio.nome }}</h4>
         <p><em>{{ recheio.descricao }}</em></p>
         <a href="{{ recheio.link }}" class="btn">Saiba Mais</a>
       </div>
@@ -345,7 +345,7 @@
     <div class="card">
       <img src="{{ url_for('static', filename='imgs/' + pote.img) }}" alt="{{ pote.nome }}">
       <div class="card-content">
-        <h4>{{ pote.id }}. {{ pote.nome }} <span>{{ pote.preco }}</span></h4>
+        <h4>{{ pote.id }}. {{ pote.nome }}</h4>
         <p><em>{{ pote.descricao }}</em></p>
         <a href="{{ pote.link }}" class="btn">Saiba Mais</a>
       </div>
@@ -358,7 +358,7 @@
     <div class="card">
       <img src="{{ url_for('static', filename='imgs/' + novidade.img) }}" alt="{{ novidade.nome }}">
       <div class="card-content">
-        <h4>{{ novidade.id }}. {{ novidade.nome }} <span>{{ novidade.preco }}</span></h4>
+        <h4>{{ novidade.id }}. {{ novidade.nome }}</h4>
         <p><em>{{ novidade.descricao }}</em></p>
         <a href="{{ novidade.link }}" class="btn">Saiba Mais</a>
       </div>
@@ -372,9 +372,6 @@
       <img src="{{ url_for('static', filename='imgs/' + bebida.img) }}" alt="{{ bebida.nome }}">
       <div class="card-content">
         <h4>{{ bebida.id }}. {{ bebida.nome }}</h4>
-        {% for preco in bebida.precos %}
-        <h4>ㅤㅤ<span>{{ preco }}</span></h4>
-        {% endfor %}
         <p><em>{{ bebida.descricao }}</em></p>
         <a href="{{ bebida.link }}" class="btn">Saiba Mais</a>
       </div>
