--- a/templates/DetailsTemplate.html
+++ b/templates/DetailsTemplate.html
@@ -40,7 +40,7 @@
         <div class="ingredientes">
           <strong>Ingredientes:</strong><br>
           {% for v in ingredients %}
-          <span>{{ v }}</span>span>Açúcar</span> <span>Canela</span> <span>Farinha</span> <span>Fermento</span> <span>Leite</span> <span>Óleo e Ovos - Calda: Açúcar e Água</span>
+          <span>{{ v }}</span>
           {{% endfor %}}
         </div>
         <div class="descricao">{{ description }}</div>
