sem url for no template pra o gin

--- a/templates/ginTemplateFormat.html
+++ b/templates/ginTemplateFormat.html
@@ -263,7 +263,7 @@
   <header>
     <div style="display: flex; justify-content: left; gap: 5px;">
       <h1>Bem Me Cake</h1>
-      <img src="{{ url_for('static', filename='imgs/Logo_BemMeCake.png') }}" style="height: 30px;" alt="Logo Bem Me Cake">
+      <img src="/static/imgs/Logo_BemMeCake.png" style="height: 30px;" alt="Logo Bem Me Cake">
     </div>
     <span class="menu-toggle">☰</span>
     <nav>
