--- a/templates/ginTemplateFormat.html
+++ b/templates/ginTemplateFormat.html
@@ -324,6 +324,8 @@
           <a href="{{ .Url }}" class="btn">Saiba Mais</a>
         </div>
       </div>
+      {{ else }}
+        <p>Nenhum encontrado</p>
     {{ end }}
 
     <!-- 🍯 RECHEIOS -->
@@ -337,6 +339,8 @@
           <a href="{{ .Url }}" class="btn">Saiba Mais</a>
         </div>
       </div>
+      {{ else }}
+        <p>Nenhum encontrado</p>
     {{ end }}
 
     <!-- 🧁 BOLOS DE POTE -->
@@ -350,6 +354,8 @@
           <a href="{{ .Url }}" class="btn">Saiba Mais</a>
         </div>
       </div>
+      {{ else }}
+        <p>Nenhum encontrado</p>
     {{ end }}
 
     <!-- 🌟 NOVIDADES -->
@@ -363,6 +369,8 @@
           <a href="{{ .Url }}" class="btn">Saiba Mais</a>
         </div>
       </div>
+      {{ else }}
+        <p>Nenhum encontrado</p>
     {{ end }}
 
     <!-- 🍹 BEBIDAS -->
@@ -376,6 +384,8 @@
           <a href="{{ .Url }}" class="btn">Saiba Mais</a>
         </div>
       </div>
+      {{ else }}
+        <p>Nenhum encontrado</p>
     {{ end }}
 
   <footer id="sobre">
