bugfix nome errado no html

--- a/templates/ginDetailsTemplate.html
+++ b/templates/ginDetailsTemplate.html
@@ -30,7 +30,7 @@
   </header>
   <div class="container">
     <div class="card">
-      <img src="{{ .Item.ImageUrl }}" alt="{{ .Item.Name}}">
+      <img src="{{ .Item.ImageLink }}" alt="{{ .Item.Name}}">
       <div class="card-content">
         <h2>{{ .Item.Name }}</h2>
         <div class="precos">
