sou um asno e coloquei / no caminho real e esqueci do /static no html

--- a/templates/ginDetailsTemplate.html
+++ b/templates/ginDetailsTemplate.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header>
-    <div style="display:flex; align-items:center; gap:8px;"><h1>Bem Me Cake</h1><img src="imgs/Logo_BemMeCake.png" alt="Logo" style="height:30px;"></div>
+    <div style="display:flex; align-items:center; gap:8px;"><h1>Bem Me Cake</h1><img src="/static/imgs/Logo_BemMeCake.png" alt="Logo" style="height:30px;"></div>
     <a href="/" class="btn">⬅ Voltar</a>
   </header>
   <div class="container">
