colocando o content-type no form

--- a/templates/Add.html
+++ b/templates/Add.html
@@ -31,7 +31,7 @@
     <main class="container mt-5">
         <h1 class="text-center fw-bold">Adicionar produtos</h1>
         <div class="card p-2">
-            <form action="/admin/add" method="post">
+            <form action="/admin/add" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">Nome do produto</label>
                     <input class="form-control" id="name" name="name" type="text" required>
