renderizando cada gategoria

--- a/templates/Add.html
+++ b/templates/Add.html
@@ -80,7 +80,8 @@
                         <option value="boloPote">Bolo de pote</option>
                         <option value="doce">Doce</option>
                         <option value="bebida" >Bebida</option>
-                        <option value="recheio">Recheios</option>
+                        <option value="recheio">Recheio</option>
+                        <option value="novidade">Recheio</option>
                     </select>
                 </div>
 
