--- a/templates/ginTemplateFormat.html
+++ b/templates/ginTemplateFormat.html
@@ -289,7 +289,7 @@
 
     <!-- 🍰 BOLOS CASEIROS -->
     <h3 class="category-title" id="caseiros">Bolos Caseiros</h3>
-    {{ range .bolosCaseiros }}
+    {{ range .boloCaseiro }}
       <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
@@ -302,7 +302,7 @@
 
     <!-- 🎂 BOLOS DE FESTA -->
     <h3 class="category-title" id="bolos_de_festa">Bolos de Festa</h3>
-    {{ range .bolosFesta }}
+    {{ range .boloFesta }}
        <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
@@ -315,7 +315,7 @@
 
     <!-- 🍬 DOCES -->
     <h3 class="category-title" id="doces">Doces</h3>
-    {{ range .doces }}
+    {{ range .doce }}
        <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
@@ -330,7 +330,7 @@
 
     <!-- 🍯 RECHEIOS -->
     <h3 class="category-title" id="recheios">Recheios</h3>
-    {{ range .recheios }}
+    {{ range .recheio }}
        <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
@@ -345,7 +345,7 @@
 
     <!-- 🧁 BOLOS DE POTE -->
     <h3 class="category-title" id="bolo_de_pote">Bolo de Pote</h3>
-    {{ range .bolosPote }}
+    {{ range .boloPote }}
        <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
@@ -360,7 +360,7 @@
 
     <!-- 🌟 NOVIDADES -->
     <h3 class="category-title" id="novidades">Novidades</h3>
-    {{ range .novidades }}
+    {{ range .novidade }}
        <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
@@ -375,7 +375,7 @@
 
     <!-- 🍹 BEBIDAS -->
     <h3 class="category-title" id="bebidas">Bebidas</h3>
-    {{ range .bebidas }}
+    {{ range .bebida }}
        <div class="card">
         <img src="{{ .ImageLink }}" alt="{{ .Name }}">
         <div class="card-content">
