--- a/templates/Successedit.html
+++ b/templates/Successedit.html
@@ -91,7 +91,8 @@
                         <option value="boloPote" {{if eq .Item.Type "boloPote"}}selected{{end}} >Bolo de pote</option>
                         <option value="doce" {{if eq .Item.Type "doce"}}selected{{end}} >Doce</option>
                         <option value="bebida" {{if eq .Item.Type "bebida"}}selected{{end}} >Bebida</option>
-                        <option value="recheio" {{if eq .Item.Type "recheio"}}selected{{end}} >Recheios</option>
+                        <option value="recheio" {{if eq .Item.Type "recheio"}}selected{{end}} >Recheio</option>
+                        <option value="novidade" {{if eq .Item.Type "novidade"}}selected{{end}} >Novidade</option>
                     </select>
                 </div>
 
