removendo linhas duplicadas

--- a/templates/Add.html
+++ b/templates/Add.html
@@ -81,7 +81,7 @@
                         <option value="doce">Doce</option>
                         <option value="bebida" >Bebida</option>
                         <option value="recheio">Recheio</option>
-                        <option value="novidade">Recheio</option>
+                        <option value="novidade">Novidade</option>
                     </select>
                 </div>
 
