botão de adicionar produto

--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -36,6 +36,7 @@
     </style>
 
     <main class="container mt-5">
+        <a class="btn btn-success" href="/admin/add">Adicionar produto</a>
         <ul class="list-group g-3">
             {{ range .Item }}
             <li class="list-group-item cardneo">
