--- a/templates/ginTemplateFormat.html
+++ b/templates/ginTemplateFormat.html
@@ -240,7 +240,7 @@
         }
     }
     body {
-        background-image: url(imgs/WhatsApp\ Image\ 2025-10-01\ at\ 23.03.11.jpeg);
+        background-image: url(/static/imgs/WhatsApp\ Image\ 2025-10-01\ at\ 23.03.11.jpeg);
     }
     .btn {
         display: inline-block;
